Fix some complier warnings